--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 <head>
-<title>Ma première page</title>
-</head>
+	<title>Ma première pag</title>
+	</head>
 <body>
-<h1>Salut Github</h1>
-  <p>Ma nouvelle version!!!</p>
+	<h1>Salut Github</h1>
+	<p>Ma nouvelle version V2</p>
+
 </body>
-</html>
+</html>  
