Mise à jour index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Portfolio_Principale</title>
+    <title>Mon Portfolio</title>
     <link rel="stylesheet" href="ma_feuille_de_style.css">
 </head>
 <body>
