Mise à jour page_projets.html

--- a/page_projets.html
+++ b/page_projets.html
@@ -22,7 +22,7 @@
     <div class="column">
       <div class="image-container">
         <img src="medias/wordpress.jpg" alt="Photo 1">
-        <h3>Mon projet de début d'année Wordpress</h3>
+        <a href="https://berthy8.hosting.unilim.fr/UEL102/" class="liens_projets"> <br> Mon projet de début d'année Wordpress</a>
       </div>
     </div>
     
