--- a/page_projets.html
+++ b/page_projets.html
@@ -29,7 +29,7 @@
     <div class="column">
       <div class="image-container">
         <img src="image_siteweb.jpg" alt="Photo 2">
-        <h3>Mon projet de début d'année de mini-site</h3>
+        <a href="https://berthy8.hosting.unilim.fr/UEL104/" class="liens_projets"> <br> Mon projet de début d'année de mini-site</a>
       </div>
     </div>
     
