Mise à jour index.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section id="moi">
         <h2>Moi</h2>
         <p>Etudiante en deust webmaster et métiers de l'internet, j'ai un attrait particulier pour le webdesign et l’interface des sites web et applications que l’on propose aux utilisateurs.
-Créative, je suis plutôt portée sur le front-end et toute la stratégie, qu’impliquent les réseaux sociaux et la rédaction web, à plaire au plus grand nombre de visiteurs..</p>
+Créative, je suis plutôt portée sur le front-end et toute la stratégie, qu’impliquent les réseaux sociaux et la rédaction web, à plaire au plus grand nombre de visiteurs.</p>
     </section>
     
     <section id="competences">
