Mise à jour page_projets.html

--- a/page_projets.html
+++ b/page_projets.html
@@ -21,14 +21,14 @@
   <div class="container">
     <div class="column">
       <div class="image-container">
-        <img src="wordpress.jpg" alt="Photo 1">
+        <img src="medias/wordpress.jpg" alt="Photo 1">
         <a href="https://berthy8.hosting.unilim.fr/UEL102/" class="liens_projets"> <br> Mon projet de début d'année Wordpress</a>
       </div>
     </div>
     
     <div class="column">
       <div class="image-container">
-        <img src="image_siteweb.jpg" alt="Photo 2">
+        <img src="medias/image_siteweb.jpg" alt="Photo 2">
         <a href="https://berthy8.hosting.unilim.fr/UEL104/" class="liens_projets"> <br> Mon projet de début d'année de mini-site</a>
       </div>
     </div>
